--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.0",
     "@tanstack/react-router": "^1.97.8",
     "electron-squirrel-startup": "^1.0.1",
+    "lucide-react": "^0.473.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
