--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@electron-forge/plugin-fuses": "^7.6.0",
     "@electron-forge/plugin-vite": "^7.6.0",
     "@electron/fuses": "^1.8.0",
+    "@types/electron-squirrel-startup": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
@@ -42,9 +43,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.48.0",
     "@tanstack/react-router": "^1.97.8",
+    "electron-settings": "^4.0.4",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^10.0.0",
+    "express": "^4.21.2",
     "lucide-react": "^0.473.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vite-plugin-api-routes": "^1.2.0-beta"
   }
 }
